<?xml version="1.0"?>
<package>
  <name>chomp_multigrid</name>
  <version>0.0.0</version>
  <description>
    Multigrid CHOMP with local smoothing.
  </description>
  <url type="repository">https://github.com/personalrobotics/orchomp</url>
  <maintainer email="mzucker1@swarthmore.edu">Matt Zucker</maintainer>
  <author email="mzucker1@swarthmore.edu">Matt Zucker</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>glut</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libexpat1-dev</build_depend>
  <build_depend>libcairo2-dev</build_depend>
  <build_depend>libpng12-dev</build_depend>
  <build_depend>libccd</build_depend>
  <run_depend>glut</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>libccd</run_depend>
</package>
